--- a/style.css
+++ b/style.css
@@ -230,6 +230,7 @@
             padding-left: 25px;
             padding-right: 25px;
             font-weight: 400;
+            margin-bottom: 50px;
         }
         #dataRemaining {
             font-size: 35px;
